--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ProdukActivity"></activity>
+        <activity android:name=".AdminProdukActivity"></activity>
+        <activity android:name=".KategoriActivity" />
+        <activity android:name=".DetailActivity" />
+        <activity android:name=".ProdukActivity" />
         <activity android:name=".SearchActivity" />
         <activity android:name=".AddProduct" />
         <activity android:name=".ProfileUpdate" />
